Adding new topcis to list of new topics

--- a/bosh-new.html.md.erb
+++ b/bosh-new.html.md.erb
@@ -4,6 +4,8 @@ title: What's New in BOSH
 ## New Help Topics ##
 
 * [Errand documentation](./jobs.html)
+* [Using the BOSH Resurrector](./bosh-resurrector.html)
+* [BOSH Commands for System Administration](./sysadmin-commands.html)
 
 ## Release Notes: June 13, 2014 ##
 
