--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -44,3 +44,4 @@ Run `bosh help --all` to see all available BOSH commands.
 * [How to Locate and Watch Logs on Job VMs](./job-logs.html)
 * [Using the BOSH Resurrector](./bosh-resurrector.html)
 * [BOSH Commands for System Administration](./sysadmin-commands.html)
+* [Disaster Recovery with BOSH](./disaster-recovery.html)
