fix typo in anchor, disaster-recovery.html

--- a/disaster-recovery.html.md.erb
+++ b/disaster-recovery.html.md.erb
@@ -12,7 +12,7 @@ BOSH automates and simplifies the task of rebuilding the architecture in the fol
 
 BOSH does not back up data. Your IaaS provider or third-party backup vendor handles data storage and backup.
 
-<p class="note"><strong>Note</strong>: To minimize risks associated with colocation, install your <a href="http://docs.cloudfoundry.org/bosh/terminology.html#deployment">deployment</a>, <a href="http://docs.cloudfoundry.org/bosh/index.html">BOSH</a>, <a href="http://docs.cloudfoundry.org/bosh/terminology.html#mircrobosh">MicroBOSH</a>, and the BOSH <a href="http://docs.cloudfoundry.org/bosh/deployment-manifest.html">deployment manifest</a> in physically separate systems.</p>
+<p class="note"><strong>Note</strong>: To minimize risks associated with colocation, install your <a href="http://docs.cloudfoundry.org/bosh/terminology.html#deployment">deployment</a>, <a href="http://docs.cloudfoundry.org/bosh/index.html">BOSH</a>, <a href="http://docs.cloudfoundry.org/bosh/terminology.html#microbosh">MicroBOSH</a>, and the BOSH <a href="http://docs.cloudfoundry.org/bosh/deployment-manifest.html">deployment manifest</a> in physically separate systems.</p>
 
 ## <a id="monitoring"></a>Monitoring Issues ##
 
