remove link to meltdown in terminology topic in disaster-recovery.html

--- a/disaster-recovery.html.md.erb
+++ b/disaster-recovery.html.md.erb
@@ -104,7 +104,7 @@ BOSH uses the BOSH [Resurrector](./bosh-resurrector.html) to help it recover
 from many issues. 
 The Resurrector automatically instructs the BOSH 
 [Director](./terminology.html#director) to rebuild unresponsive VMs unless the 
-system is in [meltdown](./terminology.html#meltdown).
+system is in meltdown.
  
 Meltdown occurs when the number of unresponsive VM alerts within a specified 
 time period exceeds a specified threshold. 
