--- a/bosh-cli.html.md.erb
+++ b/bosh-cli.html.md.erb
@@ -2,9 +2,9 @@
 title: BOSH Command Line Interface
 ---
 
-**NOTE**: The latest patch of Ruby 1.9.3 is a prerequisite for installing the BOSH CLI. Ruby 2.x is not supported.
+<p class='note'><strong>NOTE</strong>: Installing the BOSH CLI requires Ruby 1.9.3-p547 or higher.</p>
 
-The BOSH Command Line Interface (CLI) is a required tool for interacting with MicroBOSH and BOSH.
+You must use the BOSH Command Line Interface (CLI) to interact with MicroBOSH and BOSH.
 
 Run this command to install BOSH CLI with the MicroBOSH plugin:
 
