Updating to replace Quantum with Neutron

--- a/create-micro-manifest.html.md.erb
+++ b/create-micro-manifest.html.md.erb
@@ -306,7 +306,7 @@ dynamic or manual networking.
 In both cases, use the `net_id` attribute to set the `network_uuid` of the
 OpenStack network you want to use.
 You must use an existing Network UUID.
-You can list your OpenStack networks using the command `quantum net-list`.
+You can list your OpenStack networks using the command `neutron net-list`.
 
 For dynamic networking, the network block takes the following form:
 
