edit connect-postgres-hadb.html title & index.html link

--- a/connect-postgres-hadb.html.md.erb
+++ b/connect-postgres-hadb.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Connecting an External Postgres Database
+title: Connecting BOSH or MicroBOSH to an External Postgres Database
 ---
 
 The BOSH Director or MicroBOSH Director stores deployed VM status information in an internal or an external database. An internal database might be sufficient for your deployment; however, a highly-available external database can improve performance and scalability and protect against data loss. 
