--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -45,4 +45,4 @@ Run `bosh help --all` to see all available BOSH commands.
 * [Using the BOSH Resurrector](./bosh-resurrector.html)
 * [BOSH Commands for System Administration](./sysadmin-commands.html)
 * [Disaster Recovery with BOSH](./disaster-recovery.html)
-* [Connecting an External Postgres Database](./connect-postgres-hadb.html)
+* [Connecting BOSH or MicroBOSH to an External Postgres Database](./connect-postgres-hadb.html)
