moved packages to main directory

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -46,3 +46,4 @@ Run `bosh help --all` to see all available BOSH commands.
 * [BOSH Commands for System Administration](./sysadmin-commands.html)
 * [Disaster Recovery with BOSH](./disaster-recovery.html)
 * [Connecting BOSH or MicroBOSH to an External Postgres Database](./connect-postgres-hadb.html)
+* [Understanding a BOSH Package](./packages.html)
