--- a/jobs.html.md.erb
+++ b/jobs.html.md.erb
@@ -60,7 +60,7 @@ BOSH does not monitor the health of any processes in instances of an errand.
 
 A job specification, or **spec**, is a YAML document that lists:
 
-* Required [packages](./reference/packages.html): A package contains source code and a script. The script describes how to compile the source code and install the resultant binary. Optionally, a package can contain the names of other packages this package depends on.
+* Required [packages](./packages.html): A package contains source code and a script. The script describes how to compile the source code and install the resultant binary. Optionally, a package can contain the names of other packages this package depends on.
 * Job templates: The names and file paths to [job templates](#templates) that the job uses.
 * Job properties: BOSH uses job properties when creating an instance of a job. Typical job properties include account names, passwords, shared secrets, hostnames, IP addresses, port numbers, and descriptions.
 
