change 'Create and configure Security' to 'Create and configure Security Groups' in MicroBosh-to-AWS

--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -16,7 +16,7 @@ To configure AWS for MicroBOSH:
 * [Create a Key Pair](#create-key-pair)
 * [Create a Virtual Private Cloud](#create-vpc)
 * [Create an Elastic IP](#create-eip)
-* [Create and configure Security](#create-security)
+* [Create and configure Security Groups](#create-security)
 
 ### <a id="credentials"></a>Obtain AWS credentials ###
 
@@ -137,7 +137,7 @@ Click **Yes, Allocate**.
 
 1. Record the Elastic IP **Address** for use in [Step 2: Create the Deployment Manifest](#create-manifest).
 
-### <a id="create-security"></a>Create and Configure Security ###
+### <a id="create-security"></a>Create and Configure Security Groups ###
 
 1. On the VPC Dashboard, click **Security Groups**.
 
