change 'micro-bosh' to 'microbosh' in example manifest file

--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -217,7 +217,7 @@ The MicroBOSH deployment manifest template:
 
 <pre class='terminal'>
 ---
-name: micro-bosh
+name: microbosh
 logging:
 level: debug
 
@@ -352,7 +352,7 @@ The default username and password are `admin` and `admin`.
 
     <pre class="terminal">
     $ bosh target 54.86.66.111
-    Target set to 'micro-bosh'
+    Target set to 'microbosh'
     Your username: admin
     Enter password: *****
     Logged in as 'admin'
