fix typo in deploy-microbosh-to-aws.html

--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -322,8 +322,8 @@ cloud_properties:
     Deployment set to ~workspace/deployment/microbosh.yml
     </pre>
 
-    **Note**: The `WARNING!` message alerts you to a change in targeted Elastic
-    IP address, and is not an error message.
+    **Note**: The `WARNING!` message alerts you to a change in the targeted
+	IP address, and is not an error message.
 
 1. Use `bosh micro deploy AMI-IDENTIFIER` to deploy MicroBOSH using the AMI
 identifier from the downloaded stemcell.
