change 'NOTE' to 'Note' in bosh-cli.html

--- a/bosh-cli.html.md.erb
+++ b/bosh-cli.html.md.erb
@@ -2,7 +2,7 @@
 title: BOSH Command Line Interface
 ---
 
-<p class='note'><strong>NOTE</strong>: Installing the BOSH CLI requires the latest patched version of Ruby 1.9.3, 2.0.x, or 2.1.x.</p>
+<p class='note'><strong>Note</strong>: Installing the BOSH CLI requires the latest patched version of Ruby 1.9.3, 2.0.x, or 2.1.x.</p>
 
 You must use the BOSH Command Line Interface (CLI) to interact with MicroBOSH and BOSH.
 
