change 'guide' to 'topic' in Deploying MicroBOSH to AWS topic

--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -2,7 +2,7 @@
 title: Deploying MicroBOSH to AWS
 ---
 
-This guide explains how to deploy MicroBOSH to Amazon Web Services (AWS).
+This topic explains how to deploy MicroBOSH to Amazon Web Services (AWS).
 
 Before you begin, install the [BOSH Command Line Interface (CLI)](./bosh-cli.html).
 
