add Deploying MicroBOSH to OpenStack topic to index.html

--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -17,7 +17,7 @@ IaaS.
 If you are using AWS, OpenStack, or vSphere, refer instead to these specific topics:
 
 * [Deploying MicroBOSH to AWS](./deploy-microbosh-to-aws.html)
-* [Deploying MicroBOSH to OpenStack](/deploying/openstack/deploying_microbosh.html)
+* [Deploying MicroBOSH to OpenStack](./deploy-microbosh-to-openstack.html)
 * [Deploying MicroBOSH to vSphere](/deploying/vsphere/deploying_micro_bosh.html)
 
 ## <a id="configure-local"></a>Step 1: Configure Local Environment ##
@@ -40,7 +40,7 @@ Examples of steps you may need to take include:
 For IaaS-specific instructions, see:
 
 * [Deploying MicroBOSH to AWS](./deploy-microbosh-to-aws.html).
-* [Deploying MicroBOSH to OpenStack](/deploying/openstack/deploying_microbosh.html).
+* [Deploying MicroBOSH to OpenStack](./deploy-microbosh-to-openstack.html).
 * [Deploying MicroBOSH to vSphere](/deploying/vsphere/deploying_micro_bosh.html).
 
 ## <a id="create-manifest"></a>Step 3: Create Deployment Manifest ##
