Add entry about empty monit file to Create a Release.

--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -188,6 +188,8 @@ check process web_ui
 Update the `monit` file for each of your jobs.
 Use `/var/vcap` paths as shown in the example.
 
+<p class="note"><strong>Note</strong>: When developing or testing a release, you can use an empty <code>monit</code> file.</p>
+
 ### <a id="job-specs"></a> Update job specs  ###
 
 At compile time, BOSH transforms templates into files, which it then replicates
