--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -42,7 +42,7 @@ Run `bosh help --all` to see all available BOSH commands.
 * [Creating a MicroBOSH Deployment Manifest](./create-micro-manifest.html)
 * [Understanding the BOSH Deployment Manifest](./deployment-manifest.html)
 * [Sample BOSH Deployment Manifest](./sample-manifest.html)
-* [Using BOSH Jobs and Errand Logs](./job-logs.html)
+* [Using BOSH Job and Errand Logs](./job-logs.html)
 * [Using the BOSH Resurrector](./bosh-resurrector.html)
 * [BOSH Commands for System Administration](./sysadmin-commands.html)
 * [Disaster Recovery with BOSH](./disaster-recovery.html)
