--- a/bosh-components.html.md.erb
+++ b/bosh-components.html.md.erb
@@ -103,7 +103,7 @@ This example shows how BOSH components interact when creating a new VM.
 time, scaling up deployment) which requires creating a new VM.
 1. The CLI passes the instruction to the Director.
 1. The Director uses the CPI to tell the IaaS to launch a VM.
-1. The IaaS provides the Director with information (IP addresses and IDs) the
+1. The IaaS provides the Director with IP address and ID information the
 Agent on the VM needs to configure the VM.
 1. The Director updates the BOSH Registry with the configuration information for
 the VM.
