--- a/create-micro-manifest.html.md.erb
+++ b/create-micro-manifest.html.md.erb
@@ -3,7 +3,7 @@ title: Creating a MicroBOSH Deployment Manifest
 ---
 
 The deployment manifest for MicroBOSH is similar to the deployment manifest for
-multi-VM BOSH, but much shorter.
+multi-VM BOSH.
 
 Parts of the manifest are IaaS-specific.
 Refer to the example for the IaaS you plan to use:
